change: old styles for new styles

--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -1,27 +1,16 @@
 header {
-  border-bottom: 1px solid #232323;
+  font-family: 'Raleway', sans-serif;
 }
 
 .header_content {
+  position: relative;
   display: flex;
   justify-content: space-between;
   align-items: center;
-  max-width: 1130px;
+  max-width: 1049px;
   margin: 0 auto;
-  padding: 26px 0 25px;
+  padding: 31px 0;
   color: var(--NAV-GRAY);
-}
-
-.header_divContentLeft {
-  display: flex;
-  align-items: center;
-}
-
-.logo {
-  font-weight: 900;
-  font-size: 16px;
-  line-height: 20px;
-  margin-right: 65px;
 }
 
 nav {
@@ -32,25 +21,30 @@ nav {
   line-height: 20px; 
 }
 
-.header_span1,
-.header_span2 {
-  transition: all 0.3s ease;
+.header_divLogo {
+  position: absolute;
+  top: 0;
+  left: 50%;
+  /* transform: translateX(50%); */
+}
+.header_divBorderLogo {
+  border: 1px solid #D9D9D9;
+  border-top: 0px;
+  padding: 15px 27px;
+  border-radius: 0 0 5px 5px;
+}
+
+.header_navSpan {
+  font-weight: 400;
+  font-size: 15px;
+  line-height: 18px;
+  color: #858585;
   cursor: pointer;
 }
 
-.header_span1:hover,
-.header_span2:hover {
-  color: var(--NAV-GRAY-ACTIVE);
+.header_idomaSpan, .header_horarioSpan {
+  font-weight: 300;
+  font-size: 15px;
+  line-height: 18px;
+  color: #949494;
 }
-
-.header_divContentRight > button {
-  border: 1px solid var(--NAV-GRAY);
-  background-color: transparent;
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 22px;
-  color: var(--NAV-GRAY);
-  padding: 8px 22px 9px 21px;
-  cursor: pointer;
-}
-
