change: new typographi

--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700;800;900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Cormorant:wght@500;600;700&family=Raleway:wght@300;400&display=swap');
 
 :root {
   --GRAY: #F3F3F3;
@@ -10,9 +10,4 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-}
-
-body {
-  background-image: url(https://raw.githubusercontent.com/villalb4/Portfolio/main/src/images/background.jpg);
-  font-family: 'Montserrat', sans-serif;
 }
