--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -1,9 +1,9 @@
 header {
   font-family: 'Raleway', sans-serif;
+  position: relative;
 }
 
 .header_content {
-  position: relative;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -25,13 +25,17 @@ nav {
   position: absolute;
   top: 0;
   left: 50%;
-  /* transform: translateX(50%); */
+  transform: translateX(-50%);
 }
 .header_divBorderLogo {
   border: 1px solid #D9D9D9;
   border-top: 0px;
   padding: 15px 27px;
   border-radius: 0 0 5px 5px;
+  transition: all ease 0.3s;
+}
+.header_divBorderLogo:hover {
+  padding: 25px 27px 15px 27px;
 }
 
 .header_navSpan {
